The finally version
The final version

--- a/Cooperative_Allocation_and_Scheduling_of_Tasks_for_Minimizing_Interval_Data_Sampling_in_WSNs.tex
+++ b/Cooperative_Allocation_and_Scheduling_of_Tasks_for_Minimizing_Interval_Data_Sampling_in_WSNs.tex
@@ -30,7 +30,7 @@
 \issn{1550-4859/2016} 
 \acmYear{2016} 
 \acmMonth{6} 
-\acmArticle{CATS: Cooperative Allocation of Tasks and Scheduling of Sampling Intervals for Maximizing Data Sharing in WSNs}
+\acmArticle{xxxx}
 %\acmVolume{9}
 %\acmNumber{4}
 		
@@ -89,19 +89,24 @@ Data sharing amongst multiple sampling tasks  significantly reduces energy consu
 \keywords{Data sharing, interval sampling tasks, data aggregation, coverage, WSNs}
 
 %\acmformat{Yawei Zhao, Deke Guo, Jia Xu, Pin Lv and Jianping Yin, 2015. Cooperative Allocation and Scheduling of Tasks for Minimizing  Interval Data Sampling in WSNs.}
+%ack: 
+%61232016  ???
+%61402513???
+%61402494???
+%61422214???
 
 \begin{bottomstuff}
+This work is supported in part by the National Basic Research Program (973 program) under Grant No. 2014CB347800, the Hunan Provincial Natural Science Fund for Distinguished Young Scholars under Grant No. 2016JJ1002,  the National Natural Science Foundation of China under Grants No.61422214, No. 61170287, No. 61232016, No. 61402494, No. 61402513, No. 61202487, the Program for New Century Excellent Talents in University, and the Preliminary Research Funding of NUDT under Grants No. JC10-05-02 and No. ZDYYJCYJ20140601.
+%This work is supported by the National Natural Science Foundation of China (NSFC), under Grant 61170287, Grant 61232016, Grant 61402494, Grant 61402513, and Grant 61202487.
 
-This work is supported by the National Natural Science Foundation of China (NSFC), under Grant 61170287, Grant 61232016, Grant 61402494, Grant 61402513, and Grant 61202487.
-
-Author's addresses: Yawei Zhao {and} Jianping Yin, College of Computer, National University of Defense Technology; Deke Guo and Tao Chen, Science and Technology on Information System Engineering Laboratory, National University of Defense Technology; Jia Xu and Pin Lv, School of Computer, Electronics and Information, Guangxi University.
+Author's addresses: Yawei Zhao {and} Jianping Yin are with College of Computer, National University of Defense Technology; Deke Guo and Tao Chen are with Science and Technology on Information System Engineering Laboratory, National University of Defense Technology; Jia Xu and Pin Lv are with School of Computer, Electronics and Information, Guangxi University.
 \end{bottomstuff}
 
 \maketitle
 
 \section{Introduction}
 \label{introduction}
-The successful applications of low-power wireless sensor networks under different scenarios, e.g., earthquake monitoring \cite{2005acoustic_diagnose_train}, railway diagnosis \cite{2007sensys_earthquake_monitor}, wild-life protection \cite{2004habitat_monitoring}, and structure monitoring \cite{2004structuralMonitoring}, are time-consuming and labor-intensive. They are all constrained by scarce resources such as power, memory and computation. Moreover, the experience of some real projects \cite{2009greenorbs,2009_oceansense,2012_CitySee_infocom} shows that the lifetime of a deployed network is constrained for several months without recharging. This phenomenon is extremely severe when data-intensive applications generate a large set of sampling tasks and need extensive sampled data.
+The successful applications of low-power wireless sensor networks under different scenarios, e.g., earthquake monitoring \cite{2005acoustic_diagnose_train}, railway diagnosis \cite{2007sensys_earthquake_monitor}, wild-life protection \cite{2004habitat_monitoring}, and structure monitoring \cite{2004structuralMonitoring}, are time-consuming and labor-intensive. They are all constrained by scarce resources such as power, memory and computation. Moreover, the experience of some real projects \cite{2009greenorbs,2009_oceansense,2012_CitySee_infocom,Wang2014Harnessing} shows that the lifetime of a deployed network is constrained for several months without recharging. This phenomenon is extremely severe when data-intensive applications generate a large set of sampling tasks and need extensive sampled data.
 
 Such data-intensive applications widely exist in monitoring systems. For example, acoustic data is collected to diagnose the state of a railway system \cite{2005acoustic_diagnose_train}. The vibration data, sampled by volcano, earthquake and structure monitoring systems \cite{fusion_based_Tosn,2007sensys_earthquake_monitor,2004structuralMonitoring}, needs to be sampled to detect the anomaly. A further example is that observed data in a wildlife monitoring system can be used to conduct scientific analysis on animals' behavior \cite{2004habitat_monitoring}. As illustrated in Fig. \ref{figure_introduction_allocation}, these applications first generate a large amount of sampling tasks. Then, those sampling tasks will be allocated to certain sensor nodes by a sink node (as indicated by the solid line). Finally, the collected sensor readings are transmitted to the sink node (as indicated by the dotted line) and then are fed into aforementioned applications.
 
@@ -806,7 +811,7 @@ In this section, we first introduce our experimental environment and settings. T
 
 We evaluate the effectiveness of our proposed algorithms on a physical testbed of WSNs. As indicated in Fig. \ref{figure_testbed}, this testbed contains $50$ wireless sensor nodes. The distance between two adjacent sensor nodes is about $20$cm. In experiments, we construct different $k$-coverage networks by adjusting transmitting power of nodes. The parameter $k$ becomes large when the output power of nodes is increased. By default, the output power is set to the lowest level, and the transmission range is only about tens of centimetres. All the nodes operate on the same channel.
 
-With such settings, although a number of nodes locate in the same collision domain, the packet loss rate observed in the experiments is less than $0.1\%$. The reason is that the nodes in the same collision domain access the wireless channel for transmission based on the MAC protocol, and packet loss caused by severe interference will not happen \cite{2006_MAC_survey}, \cite{1994MACAW}.
+With such settings, although a number of nodes locate in the same collision domain, the packet loss rate observed in the experiments is less than $0.1\%$. The reason is that the nodes in the same collision domain access the wireless channel for transmission based on the MAC protocol, and packet loss caused by severe interference will not happen \cite{2006_MAC_survey}, \cite{1994MACAW}, \cite{Wang2014TiM}.
 
 Since the wireless sensor network is densely deployed, any two nodes can set up a wireless link by at most three hops. The proposed algorithms are implemented in a centralized manner which is widely used in actual systems \cite{2009greenorbs}, \cite{2009_oceansense}, \cite{2007_outlier_detection_mobihoc},\cite{2011_compressed_data_aggregation}. We use the left-top node (as highlighted by a red rectangular) as the sink node which allocates a task set to other nodes, and the right-bottom node as the collection node (as indicated by the green rectangular) which collects all sampled data. Transmitted packets are counted to indicate the required sampled data, while received packets are collected to demonstrate the actual collected data.
 
@@ -866,10 +871,10 @@ Besides, large amount of  sampled data definitely leads to server delay and cong
 
 \section{Discussion}
 \label{discussion}
-We have proposed methods of task allocation and scheduling of sampling intervals and given much theoretical analysis about their performance. As the question is general, we aim to provide a universal solution which does not rely on the details of network. The sink node runs CATS and gets the strategy of task allocation in a wireless sensor network. It then allocates the sampling tasks to the sensor nodes. The allocation message will be added into packets and disseminated to sensor nodes with sampling tasks together. Comparing to the volume of sampled data of sampling tasks, such expenditure on the allocation solution is rather few. Meanwhile, as illustrated in Section \ref{section_performance_wsn}, adopting the strategy of task allocation can reduce redundancy of sampling data by more than 30\%. Therefore, it is worthy to trading few expenditure for appreciable data sharing \cite{Liu2012ISAR} \cite{Liu2013FADE}. Besides, some other details  such as protocols of communication and data routing do not impact performance of the proposed algorithms. We do not adopt optimization on such communication protocols or routing strategy. We aim to propose an effective solution for the joint optimization problem.
+We have proposed methods of task allocation and scheduling of sampling intervals and given much theoretical analysis about their performance. As the question is general, we aim to provide a universal solution which does not rely on the details of network. The sink node runs CATS and gets the strategy of task allocation in a wireless sensor network. It then allocates the sampling tasks to the sensor nodes. The allocation message will be added into packets and disseminated to sensor nodes with sampling tasks together. Comparing to the volume of sampled data of sampling tasks, such expenditure on the allocation solution is rather few \cite{Li2014CUTS}. Meanwhile, as illustrated in Section \ref{section_performance_wsn}, adopting the strategy of task allocation can reduce redundancy of sampling data by more than 30\%. Therefore, it is worthy to trading few expenditure for appreciable data sharing \cite{Liu2012ISAR} \cite{Liu2013FADE}. Besides, some other details  such as protocols of communication and data routing do not impact performance of the proposed algorithms. We do not adopt optimization on such communication protocols or routing strategy. We aim to propose an effective solution for the joint optimization problem.
 
 
-The allocation of tasks involves assigning each task to $r$ out of $k$ candidate sensor nodes. The current allocation scheme seeks to fully exploit the benefits of data sharing amongst tasks. In reality, there still exists other important constraints that can be exploited to improve the proposed allocation schemes. Note that each sensor node is resource-constrained, i.e., it has limited computation and memory resources. If a sensor node has been allocated many sampling tasks, it may not handle all the tasks timely and exhaust the energy at early time. This problem cannot thus be simply addressed by limiting the number of tasks a sensor node carrying. The reason is that although different nodes have the same amount of sampling tasks, the real work load of  sensor nodes may have a considerable difference due to the data sharing strategy. Therefore, contemporary task allocation schemes can be more practical if we consider the load balance amongst sensor nodes. An effective method is to set a threshold for the constrained resource. Each allocation step makes sure that the threshold value is not exceeded. Algorithm \ref{allocation_prune} and Algorithm \ref{allocation_combine} are flexible to adjust for this tactics. When the  limited resource changes dynamically, the allocation problem will be more difficult to solve. We leave it as our future work.
+The allocation of tasks involves assigning each task to $r$ out of $k$ candidate sensor nodes. The current allocation scheme seeks to fully exploit the benefits of data sharing amongst tasks. In reality, there still exists other important constraints that can be exploited to improve the proposed allocation schemes. Note that each sensor node is resource-constrained, i.e., it has limited computation and memory resources. If a sensor node has been allocated many sampling tasks, it may not handle all the tasks timely and exhaust the energy at early time \cite{Wu2013hJam}. This problem cannot thus be simply addressed by limiting the number of tasks a sensor node carrying. The reason is that although different nodes have the same amount of sampling tasks, the real work load of  sensor nodes may have a considerable difference due to the data sharing strategy. Therefore, contemporary task allocation schemes can be more practical if we consider the load balance amongst sensor nodes. An effective method is to set a threshold for the constrained resource. Each allocation step makes sure that the threshold value is not exceeded. Algorithm \ref{allocation_prune} and Algorithm \ref{allocation_combine} are flexible to adjust for this tactics. When the  limited resource changes dynamically, the allocation problem will be more difficult to solve. We leave it as our future work.
 
 In this paper, we aim to minimize the sampled data for a sampling task set by cooperatively allocating tasks and scheduling sampling intervals of tasks which are allocated to a sensor node. Our proposed algorithms do not relay on the topology of a network. In fact, the information of a network can be utilized to improve the performance of our algorithms on many respects. For example, even though many applications require to get the entire data of sampling intervals, we can divide the sampling intervals into several segments for a $k$-coverage network if these segments can be integrated into the complete task finally on the sink node. These sampling segments can be allocated to the sensor nodes, which will help to balance the sampling workload on sensor nodes in our proposals. However, embedding the network information into our solutions introduces arduous problems, including task dividing, data fusion and so forth. We leave it as our future work as well.
 
