--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,46 @@
+@article{Wu2013hJam,
+  title={hJam: Attachment Transmission in WLANs},
+  author={Wu, Kaishun and Li, Haochao and Wang, Lu and Yi, Youwen and Liu, Yunhuai and Chen, Dihu and Luo, Xiaonan and Zhang, Qian and Ni, Lionel M.},
+  journal={IEEE Transactions on Mobile Computing},
+  volume={12},
+  number={12},
+  pages={1449-1457},
+  year={2013},
+}
+
+@article{Wang2014TiM,
+  title={TiM: Fine-Grained Rate Adaptation in WLANs},
+  author={Wang, Guanhua and Zhang, Shanfeng and Wu, Kaishun and Zhang, Qian and Ni, Lionel M.},
+  journal={IEEE Transactions on Mobile Computing},
+  volume={15},
+  number={3},
+  pages={577-586},
+  year={2014},
+}
+
+@article{Li2014CUTS,
+  title={CUTS: Improving Channel Utilization in Both Time and Spatial Domain in WLANs},
+  author={Li, Haochao and Wu, Kaishun and Zhang, Qian and Ni, Lionel M.},
+  journal={ Proc. IEEE INFOCOM},
+  volume={25},
+  number={6},
+  pages={1564-1572},
+  year={2014},
+}
+
+@article{Wang2014Harnessing,
+  title={Harnessing Frequency Domain for Cooperative Sensing and Multi-channel Contention in CRAHNs},
+  author={Wang, Lu and Wu, Kaishun and Xiao, Jiang and Hamdi, M.},
+  journal={IEEE Transactions on Wireless Communications},
+  volume={13},
+  number={1},
+  pages={440-449},
+  year={2014},
+}
+
+
+
+
 @article{Liu2012ISAR,
   title={ISAR: Improved Situation-Aware Routing Method for Wireless Mesh Backbones},
   author={Liu, Qiang and Yin, Jianping and Leung, V. C. M. and Cai, Zhiping},
